fixed image stretching

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -10,10 +10,3 @@ h1 {
     font-family: Tahoma, sans-serif;
     font-size: 42px;
 }
-
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
